--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
-    "assert": "^2.0.0"
+    "assert": "^2.0.0",
+    "babel-polyfill": "^6.26.0"
   }
 }
