--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
   },
   "devDependencies": {
     "express": "^4.17.1",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.3.1"
+  },
+  "staticFiles": {
+    "staticPath": [
+      {
+        "staticPath": "web/map",
+        "staticOutDir": "map"
+      }
+    ]
   },
   "dependencies": {
     "assert": "^2.0.0",
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "fetch": "^1.1.0"
   }
 }
