--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "express": "^4.17.1",
+    "glslify-bundle": "^5.1.1",
+    "glslify-deps": "^1.3.1",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.3.1"
   },
