--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Random Ambersky <random@amberskynet.org>",
   "license": "MIT",
   "scripts": {
-    "dev": "node build-client.js",
+    "dev-node": "node build-client.js",
+    "dev": "parcel web/index.html",
     "build": "parcel build web/index.html"
   },
   "devDependencies": {
@@ -14,6 +15,7 @@
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.2",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-wasm.rs": "^1.3.0",
     "parcel-plugin-static-files-copy": "^2.5.0"
   },
   "staticFiles": {
