--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib"]
 
+[dependencies]
+console_error_panic_hook = "*"
 
 [dependencies.wasm-bindgen]
 version = "*"
