--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.2",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-wasm.rs": "^1.3.0",
-    "parcel-plugin-static-files-copy": "^2.5.0"
+    "parcel-plugin-static-files-copy": "^2.5.1",
+    "parcel-plugin-wasm.rs": "^1.3.0"
   },
   "staticFiles": {
     "staticPath": [
