--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Random Ambersky"]
 edition = "2018"
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [lib]
 crate-type = ["cdylib"]
 
