some little ref

--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -24,5 +24,7 @@ features = [
     'Document',
     'Element',
     'HtmlCanvasElement',
-    'WebGlRenderingContext'
+    'WebGlRenderingContext',
+    'WebGlProgram',
+    'WebGlShader',
 ]
