some little ref

--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib"]
 [dependencies]
 console_error_panic_hook = "*"
 uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
+js-sys = "*"
 
 [dependencies.wasm-bindgen]
 version = "*"
@@ -27,4 +28,5 @@ features = [
     'WebGlRenderingContext',
     'WebGlProgram',
     'WebGlShader',
+    'WebGlBuffer'
 ]
