--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["Random Ambersky"]
 edition = "2018"
 
-#[package.metadata.wasm-pack.profile.release]
-#wasm-opt = false
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
 
 [lib]
 crate-type = ["cdylib"]
