--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -17,6 +17,7 @@ crate-type = ["cdylib"]
 console_error_panic_hook = { version = "*", optional = true }
 uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
 js-sys = "*"
+image = { version="*", default-features = false, features = ["png", "tga"] }
 #glyph_brush = "*"
 
 [dependencies.wasm-bindgen]
