--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib"]
 console_error_panic_hook = "*"
 uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
 js-sys = "*"
-glyph_brush = "*"
+ab_glyph = "*"
 
 [dependencies.wasm-bindgen]
 version = "*"
