--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
     "build": "parcel build web/index.html"
   },
   "devDependencies": {
-    "express": "^4.17.1",
-    "glslify-bundle": "^5.1.1",
-    "glslify-deps": "^1.3.2",
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-static-files-copy": "^2.6.0",
-    "parcel-plugin-wasm.rs": "^1.3.0"
+    "express": "^4.17.2"
   },
   "staticFiles": {
     "staticPath": [
