--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "parcel build web/index.html"
   },
   "devDependencies": {
-    "parcel": "^2.2.1"
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-wasm.rs": "^1.3.0"
   }
 }
