--- a/src/mylogger/Cargo.toml
+++ b/src/mylogger/Cargo.toml
@@ -3,6 +3,10 @@ name = "mylogger"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "mylogger"
+path = "src/lib.rs"
+
 [dependencies]
 [dependencies.wasm-bindgen]
 version = "*"
