--- a/src/amberskynet/Cargo.toml
+++ b/src/amberskynet/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[profile.release]
+lto = true
+opt-level = 'z'
+#opt-level = 's'
+
 [dependencies]
 amberskynet_logger_web = { path="../amberskynet_logger_web" }
 console_error_panic_hook = "*"
