--- a/src/amberskynet_logger_web/Cargo.toml
+++ b/src/amberskynet_logger_web/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 name = "amberskynet_logger_web"
 path = "src/lib.rs"
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [dependencies]
 [dependencies.wasm-bindgen]
 version = "*"
