--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "dev": "parcel web/index.html",
     "build": "parcel build web/index.html"
   },
+  "staticFiles": {
+    "staticPath": [
+      {
+        "staticPath": "web/map",
+        "staticOutDir": "map"
+      }
+    ]
+  },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
-    "parcel-plugin-wasm.rs": "^1.3.0"
+    "parcel-plugin-wasm.rs": "^1.3.0",
+    "parcel-plugin-static-files-copy": "^2.6.0"
   }
 }
