--- a/src/amberskynet/Cargo.toml
+++ b/src/amberskynet/Cargo.toml
@@ -16,22 +16,11 @@ opt-level = 'z'
 
 [dependencies]
 amberskynet_logger_web = { path="../amberskynet_logger_web" }
+asn_render_webgl = { path="../asn_render_webgl" }
 console_error_panic_hook = "*"
 uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
 js-sys = "*"
 
 [dependencies.wasm-bindgen]
 version = "*"
-[dependencies.web-sys]
-version = "*"
-features = [
-    "Window",
-    'Document',
-    'Element',
-    'HtmlCanvasElement',
-    'WebGlRenderingContext',
-    'WebGlProgram',
-    'WebGlShader',
-    'WebGlBuffer',
-    'WebGlUniformLocation'
-]
+
