--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -4,5 +4,6 @@ members = [
     "amberskynet",
     "amberskynet_logger_web",
     "asn_render_webgl",
-    "asn_math"
+    "asn_math",
+    "asn_test_2d"
 ]
