--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -5,5 +5,6 @@ members = [
     "amberskynet_logger_web",
     "asn_render_webgl",
     "asn_math",
-    "asn_test_2d"
+    "asn_test_2d",
+    "asn_view_2d"
 ]
