--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -6,5 +6,6 @@ members = [
     "asn_render_webgl",
     "asn_math",
     "asn_test_2d",
-    "asn_view_2d"
+    "asn_view_2d",
+    "asn_render_color_quad"
 ]
