--- a/src/renders/tests/test_triangle/Cargo.toml
+++ b/src/renders/tests/test_triangle/Cargo.toml
@@ -11,8 +11,8 @@ path = "src/lib.rs"
 wasm-opt = false
 
 [dependencies]
-asn_render_webgl = { path="../../asn_render_webgl" }
-asn_math= { path="../../asn_math" }
+asn_render_webgl = { path="../../../asn_render_webgl" }
+asn_math= { path="../../../asn_math" }
 js-sys = "*"
 [dependencies.wasm-bindgen]
 version = "*"
