--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "asn_math",
     "asn_test_2d",
     "asn_view_2d",
-    "asn_render_color_quad",
-    "./renders/tests/test_triangle"
+    "./renders/tests/color_quad",
+    "./renders/tests/triangle"
 ]
+
