--- a/src/amberskynet/Cargo.toml
+++ b/src/amberskynet/Cargo.toml
@@ -19,8 +19,8 @@ amberskynet_logger_web = { path="../amberskynet_logger_web" }
 asn_render_webgl = { path="../asn_render_webgl" }
 asn_test_2d = { path="../asn_test_2d" }
 asn_view_2d = { path="../asn_view_2d" }
-asn_render_color_quad = { path="../asn_render_color_quad" }
-test_triangle = { path="../renders/tests/test_triangle" }
+color_quad = { path="../renders/tests/color_quad" }
+triangle = { path="../renders/tests/triangle" }
 console_error_panic_hook = "*"
 uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
 js-sys = "*"
