--- a/src/renders/tests/color_quad/Cargo.toml
+++ b/src/renders/tests/color_quad/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "test_triangle"
+name = "color_quad"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "test_triangle"
+name = "color_quad"
 path = "src/lib.rs"
 
 [package.metadata.wasm-pack.profile.release]
