--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
-    "parcel-plugin-wasm.rs": "^1.3.0",
-    "parcel-plugin-static-files-copy": "^2.6.0"
+    "parcel-plugin-static-files-copy": "^2.6.0",
+    "parcel-plugin-wasm.rs": "^1.3.0"
   }
 }
