--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev-node": "node build-client.js",
-    "dev": "parcel web/index.html",
-    "build": "parcel build web/index.html"
+    "dev": "parcel web/index.html --no-source-maps",
+    "build": "parcel build web/index.html --no-source-maps --experimental-scope-hoisting"
   },
   "staticFiles": {
     "staticPath": [
