--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "ambernet-rust-engine",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/RandomAmbersky/ambernet-rust-engine.git",
   "author": "Random Ambersky <random@amberskynet.org>",
   "license": "MIT",
   "scripts": {
     "dev-node": "node build-client.js",
     "dev": "parcel web/index.html --no-source-maps",
-    "build": "parcel build web/index.html --no-source-maps --experimental-scope-hoisting"
+    "build": "parcel build web/index.html"
   },
   "staticFiles": {
     "staticPath": [
@@ -18,9 +17,11 @@
       }
     ]
   },
+  "dependencies": {
+    "amberskynet": "file:./amberskynet"
+  },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-static-files-copy": "^2.6.0",
-    "parcel-plugin-wasm.rs": "^1.3.0"
+    "@parcel/transformer-toml": "2.6.2",
+    "parcel": "^2.6.2"
   }
 }
