--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
       }
     ]
   },
+  "dependencies": {
+    "wasm-game-of-life": "file:./demo/pkg/"
+  },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-static-files-copy": "^2.6.0",
