--- a/www/package.json
+++ b/www/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "create-wasm-app",
-  "version": "0.1.0",
-  "description": "create an app to consume rust-generated wasm packages",
+  "name": "ambernet-rust-engine",
+  "version": "1.0.0",
+  "repository": "https://github.com/RandomAmbersky/ambernet-rust-engine.git",
+  "author": "Random Ambersky <random@amberskynet.org>",
+  "license": "MIT",
+  "description": "another some custom engine",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server"
   },
   "dependencies": {
     "amberskynet": "file:../src/amberskynet/pkg"
