--- a/www/package.json
+++ b/www/package.json
@@ -10,10 +10,8 @@
     "build": "webpack --config webpack.config.js",
     "dev": "webpack-dev-server"
   },
-  "dependencies": {
-    "amberskynet": "file:../src/amberskynet/pkg"
-  },
   "devDependencies": {
+    "@wasm-tool/wasm-pack-plugin": "^1.6.0",
     "copy-webpack-plugin": "^11.0.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
