--- a/src/amberskynet/Cargo.toml
+++ b/src/amberskynet/Cargo.toml
@@ -14,6 +14,9 @@ lto = true
 opt-level = 'z'
 #opt-level = 's'
 
+[features]
+console_error_panic_hook=[]
+
 [dependencies]
 amberskynet_logger_web = { path="../amberskynet_logger_web" }
 asn_render_webgl = { path="../asn_render_webgl" }
