--- a/src/asn_view_2d/Cargo.toml
+++ b/src/asn_view_2d/Cargo.toml
@@ -12,6 +12,7 @@ wasm-opt = false
 
 [dependencies]
 asn_render_webgl = { path="../asn_render_webgl" }
+asn_images = { path="../asn_images" }
 amberskynet_logger_web = { path="../amberskynet_logger_web" }
 asn_math= { path="../asn_math" }
 js-sys = "*"
