--- a/src/amberskynet/Cargo.toml
+++ b/src/amberskynet/Cargo.toml
@@ -32,3 +32,4 @@ console_error_panic_hook = "*"
 uuid = { version="*", features = ['wasm-bindgen', 'v4'] }
 js-sys = "*"
 wasm-bindgen = "*"
+rand = "*"
