--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -4,9 +4,10 @@ members = [
     "amberskynet",
     "amberskynet_logger_web",
     "asn_render_webgl",
-    "asn_math",
+    "./core/asn_math",
+    "./core/asn_map",
     "asn_images",
-    "asn_tiled",
+    "loaders/asn_tiled",
     "asn_test_2d",
     "asn_view_2d",
     "asn_utils_js",
