--- a/src/asn_render_webgl/Cargo.toml
+++ b/src/asn_render_webgl/Cargo.toml
@@ -12,7 +12,7 @@ wasm-opt = false
 
 [dependencies]
 amberskynet_logger_web = { path="../amberskynet_logger_web" }
-asn_math = { path="../asn_math" }
+asn_math = { path="../core/asn_math" }
 asn_images = { path="../asn_images" }
 js-sys = "*"
 [dependencies.wasm-bindgen]
