--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "asn_render_webgl",
     "./core/asn_math",
     "./core/asn_array_2d",
-    "asn_images",
+    "loaders/asn_images",
     "loaders/asn_tiled",
     "asn_test_2d",
     "asn_view_2d",
