--- a/src/asn_view_2d/Cargo.toml
+++ b/src/asn_view_2d/Cargo.toml
@@ -12,7 +12,7 @@ wasm-opt = false
 
 [dependencies]
 asn_render_webgl = { path="../asn_render_webgl" }
-asn_images = { path="../asn_images" }
+asn_images = { path= "../loaders/asn_images" }
 amberskynet_logger_web = { path="../amberskynet_logger_web" }
 asn_math= { path="../core/asn_math" }
 asn_array_2d = { path= "../core/asn_array_2d" }
