--- a/src/asn_view_2d/Cargo.toml
+++ b/src/asn_view_2d/Cargo.toml
@@ -16,6 +16,7 @@ asn_images = { path= "../loaders/asn_images" }
 amberskynet_logger_web = { path="../amberskynet_logger_web" }
 asn_math= { path="../core/asn_math" }
 asn_array_2d = { path= "../core/asn_array_2d" }
+asn_core = { path= "../core" }
 js-sys = "*"
 [dependencies.wasm-bindgen]
 version = "*"
