--- a/src/amberskynet/Cargo.toml
+++ b/src/amberskynet/Cargo.toml
@@ -24,6 +24,7 @@ asn_render_webgl = { path="../asn_render_webgl" }
 asn_test_2d = { path="../asn_test_2d" }
 asn_view_2d = { path="../asn_view_2d" }
 asn_utils_js = { path="../asn_utils_js" }
+asn_images = { path= "../loaders/asn_images" }
 asn_tiled = { path= "../loaders/asn_tiled" }
 asn_core = { path = "../core" }
 asn_array_2d = { path= "../core/asn_array_2d" }
