--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -4,8 +4,7 @@ members = [
     "amberskynet",
     "amberskynet_logger_web",
     "asn_render_webgl",
-    "./core/asn_math",
-    "./core/asn_array_2d",
+    "core",
     "loaders/asn_images",
     "loaders/asn_tiled",
     "asn_test_2d",
