--- a/src/asn_render_webgl/Cargo.toml
+++ b/src/asn_render_webgl/Cargo.toml
@@ -12,9 +12,8 @@ wasm-opt = false
 
 [dependencies]
 amberskynet_logger_web = { path="../amberskynet_logger_web" }
-asn_math = { path="../core/asn_math" }
+asn_core = { path = "../core" }
 asn_images = { path= "../loaders/asn_images" }
-asn_array_2d = { path= "../core/asn_array_2d" }
 js-sys = "*"
 [dependencies.wasm-bindgen]
 version = "*"
