--- a/src/loaders/asn_images/Cargo.toml
+++ b/src/loaders/asn_images/Cargo.toml
@@ -8,6 +8,5 @@ name = "asn_images"
 path = "src/lib.rs"
 
 [dependencies]
-asn_array_2d = { path= "../../core/asn_array_2d" }
+asn_core = { path = "../../core" }
 image="*"
-
