--- a/src/loaders/asn_tiled/Cargo.toml
+++ b/src/loaders/asn_tiled/Cargo.toml
@@ -11,6 +11,6 @@ path = "src/lib.rs"
 #wasm-opt = false
 
 [dependencies]
-asn_array_2d = { path= "../../core/asn_array_2d" }
+asn_core = { path = "../../core" }
 amberskynet_logger_web = { path= "../../amberskynet_logger_web" }
 xmlparser = "*"
