--- a/src/renders/tests/textured_quad/Cargo.toml
+++ b/src/renders/tests/textured_quad/Cargo.toml
@@ -12,7 +12,7 @@ wasm-opt = false
 
 [dependencies]
 asn_render_webgl = { path="../../../asn_render_webgl" }
-asn_math= { path="../../../core/asn_math" }
+asn_core = { path = "../../../core" }
 asn_images= { path= "../../../loaders/asn_images" }
 js-sys = "*"
 [dependencies.wasm-bindgen]
