--- a/src/amberskynet/Cargo.toml
+++ b/src/amberskynet/Cargo.toml
@@ -37,7 +37,7 @@ js-sys = "*"
 wasm-bindgen = "*"
 rand = "*"
 specs = "*"
-tiled = { version = "0.9", default-features = false }
+#tiled = { version = "0.9", default-features = false }
 
 [dependencies.web-sys]
 version = "*"
