--- a/rs-amberskynet/Cargo.toml
+++ b/rs-amberskynet/Cargo.toml
@@ -13,6 +13,7 @@ winit = "0.27.3"
 cfg-if = "1"
 log = "0.4.17"
 pollster = "0.2.5"
+bytemuck = { version = "1.12.1", features = ["derive"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
