--- a/rs-amberskynet/Cargo.toml
+++ b/rs-amberskynet/Cargo.toml
@@ -1,28 +1,50 @@
 [package]
-name = "rs-amberskynet"
+name = "tutorial6-uniforms"
 version = "0.1.0"
-edition = "2021"
+authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
+edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-env_logger = "0.9.1"
-wgpu = "0.13.1"
-winit = "0.27.3"
 cfg-if = "1"
-log = "0.4.17"
-pollster = "0.2.5"
-bytemuck = { version = "1.12.1", features = ["derive"] }
+anyhow = "1.0"
+bytemuck = { version = "1.4", features = [ "derive" ] }
+cgmath = "0.18"
+env_logger = "0.9"
+log = "0.4"
+pollster = "0.2"
+wgpu = "0.13"
+winit = "0.26"
+
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = "0.1.6"
-console_log = "0.2.0"
+console_error_panic_hook = "0.1"
+console_log = "0.2"
 wgpu = { version = "0.13", features = ["webgl"]}
 wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4.30"
+wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
     "Document",
     "Window",
     "Element",
 ]}
+
+[build-dependencies]
+anyhow = "1.0"
+fs_extra = "1.2"
+glob = "0.3"
+
+[[bin]]
+name = "tutorial6-uniforms"
+path = "src/main.rs"
+
+
+[[bin]]
+name = "tutorial6-challenge"
+path = "src/challenge.rs"
