--- a/www-WebGPU/package.json
+++ b/www-WebGPU/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.6.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
+    "ts-shader-loader": "^2.0.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
