--- a/rs-amberskynet/Cargo.toml
+++ b/rs-amberskynet/Cargo.toml
@@ -17,7 +17,7 @@ pollster = "0.3"
 winit = "0.28"
 rand = "0.8.5"
 rs-core = { path = "../rs-core" }
-rs-core-gfx = { path = "../rs-gfx-core" }
+rs-gfx-core = { path = "../rs-gfx-core" }
 rs-gfx-wgpu = { path = "../rs-gfx-wgpu" }
 
 [build-dependencies]
