--- a/rs-amberskynet/Cargo.toml
+++ b/rs-amberskynet/Cargo.toml
@@ -24,5 +24,8 @@ anyhow = "1.0"
 fs_extra = "1.3"
 glob = "0.3"
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wgpu = { version = "0.16", features = ["webgl"]}
+
 [dev-dependencies]
 wgpu = "0.16"
