--- a/asn-logger/Cargo.toml
+++ b/asn-logger/Cargo.toml
@@ -10,3 +10,6 @@ env_logger = "0.10"
 log = "0.4"
 chrono = { version = "0.4", features = ["wasmbind"] }
 fern = { version = "0.6", features = ["colored"] }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_log = "*"
