--- a/rs-gfx-wgpu/Cargo.toml
+++ b/rs-gfx-wgpu/Cargo.toml
@@ -14,3 +14,6 @@ rs-gfx-core = { path = "../rs-gfx-core" }
 version = "0.24"
 default-features = false
 features = ["png", "jpeg"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wgpu = { version = "0.16", features = ["webgl"]}
