--- a/rs-amberskynet/Cargo.toml
+++ b/rs-amberskynet/Cargo.toml
@@ -7,25 +7,41 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-cfg-if = "1"
-anyhow = "1.0"
-bytemuck = { version = "1.12", features = [ "derive" ] }
-cgmath = "0.18"
-pollster = "0.3"
-winit = "0.28"
-rand = { version = "0.8.5", default-features = false }
 asn-logger = { path = "../asn-logger"}
 rs-core = { path = "../rs-core" }
 rs-gfx-core = { path = "../rs-gfx-core" }
 rs-gfx-wgpu = { path = "../rs-gfx-wgpu" }
+winit = "0.28"
+bytemuck = { version = "1.12", features = [ "derive" ] }
+rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 
-[build-dependencies]
-anyhow = "1.0"
-fs_extra = "1.3"
-glob = "0.3"
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+wgpu = "0.16"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wgpu = { version = "0.16", features = ["webgl"]}
 
-[dev-dependencies]
-wgpu = "0.16"
+#[dependencies]
+#cfg-if = "1"
+#anyhow = "1.0"
+
+#cgmath = "0.18"
+#pollster = "0.3"
+#winit = "0.28"
+#rand = "0.8.5"
+
+#[build-dependencies]
+#anyhow = "1.0"
+#fs_extra = "1.3"
+#glob = "0.3"
+
+#[target.'cfg(target_arch = "wasm32")'.dependencies]
+#wgpu = { version = "0.16", features = ["webgl"]}
+#rand = { version = "0.8.5", default-features = false }
+
+#[dev-dependencies]
+#wgpu = "0.16"
+
+#[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+#wgpu = { version = "0.16", features = ["webgl"]}
+#rand = { version = "0.8.5", default-features = false }
