--- a/asn-logger/Cargo.toml
+++ b/asn-logger/Cargo.toml
@@ -3,13 +3,13 @@ name = "asn-logger"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+cfg-if = "1"
 env_logger = "0.10"
 log = "0.4"
 chrono = { version = "0.4", features = ["wasmbind"] }
 fern = { version = "0.6", features = ["colored"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-console_log = "*"
+console_error_panic_hook = "0.1.6"
+console_log = { version = "1.0", features = ["color"]}
