--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,15 @@ members = [
     "rs-core",
     "rs-gfx-core",
     "rs-gfx-wgpu",
-    "rs-amberskynet"
+    "rs-amberskynet",
+    "wasm-and-bin-examples/*"
 ]
-exclude = []
-default-members = [
-    "asn-logger",
-    "rs-core",
-    "rs-gfx-core",
-    "rs-gfx-wgpu",
-    "rs-amberskynet"
-]
+
+#exclude = []
+#default-members = [
+#    "asn-logger",
+#    "rs-core",
+#    "rs-gfx-core",
+#    "rs-gfx-wgpu",
+#    "rs-amberskynet"
+#]
