--- a/wasm-and-bin-examples/view2d/Cargo.toml
+++ b/wasm-and-bin-examples/view2d/Cargo.toml
@@ -3,6 +3,9 @@ name = "view2d"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+rs-amberskynet = { path = "../../rs-amberskynet" }
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
