--- a/wasm-and-bin-examples/view2d/Cargo.toml
+++ b/wasm-and-bin-examples/view2d/Cargo.toml
@@ -10,5 +10,5 @@ rs-amberskynet = { path = "../../rs-amberskynet" }
 crate-type = ["cdylib", "rlib"]
 
 [[bin]]
-name = "view2d"
+name = "view2d-bin"
 path = "src/main.rs"
