--- a/wasm-and-bin-examples/view2d/Makefile
+++ b/wasm-and-bin-examples/view2d/Makefile
@@ -2,6 +2,9 @@ run: rust-run
 
 build: rust-build
 
+wasm-build:
+	cargo build --release --target wasm32-unknown-unknown
+
 rust-build:
 	cargo build --release
 
