--- a/wasm-and-bin-examples/view2d/Makefile
+++ b/wasm-and-bin-examples/view2d/Makefile
@@ -2,8 +2,14 @@ run: rust-run
 
 build: rust-build
 
-wasm-build:
-	cargo build --release --target wasm32-unknown-unknown
+build-wasm:
+	npm i
+	npm run build
+
+serve:
+	npm i
+	npm run serve
+	#cargo build --release --target wasm32-unknown-unknown
 
 rust-build:
 	cargo build --release
