--- a/wasm-and-bin-examples/view2d/Cargo.toml
+++ b/wasm-and-bin-examples/view2d/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 rs-amberskynet = { path = "../../rs-amberskynet" }
+wasm-bindgen = "0.2"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -12,3 +13,4 @@ crate-type = ["cdylib", "rlib"]
 [[bin]]
 name = "view2d-bin"
 path = "src/main.rs"
+
