--- a/wasm-and-bin-examples/view2d/Cargo.toml
+++ b/wasm-and-bin-examples/view2d/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rs-amberskynet = { path = "../../rs-amberskynet" }
+asn-engine = { path = "../../asn-engine" }
 wasm-bindgen = "0.2"
 
 [lib]
