--- a/wasm-and-bin-examples/view2d/Cargo.toml
+++ b/wasm-and-bin-examples/view2d/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 asn-engine = { path = "../../asn-engine" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
 
 [lib]
