--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "asn-logger",
     "asn-engine",
     "asn-core",
+    "asn-runner-winit",
     "rs-amberskynet",
     "rs-core",
     "rs-gfx-core",
