--- a/asn-runner-winit/Cargo.toml
+++ b/asn-runner-winit/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+winit = "0.28.6"
 asn-core = { path = "../asn-core" }
