--- a/asn-runner-winit/Cargo.toml
+++ b/asn-runner-winit/Cargo.toml
@@ -3,8 +3,18 @@ name = "asn-runner-winit"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 winit = "0.28.6"
 asn-core = { path = "../asn-core" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+#console_error_panic_hook = "0.1.7"
+#console_log = "1.0"
+wgpu = { version = "0.16", features = ["webgl"]}
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "Element",
+]}
