--- a/asn-runner-winit/Cargo.toml
+++ b/asn-runner-winit/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 winit = "0.28.6"
 asn-core = { path = "../asn-core" }
+asn-logger = { path = "../asn-logger" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 #console_error_panic_hook = "0.1.7"
