--- a/asn-winapi-wgpu/Cargo.toml
+++ b/asn-winapi-wgpu/Cargo.toml
@@ -7,15 +7,4 @@ edition = "2021"
 winit = "0.28.6"
 asn-core = { path = "../asn-core" }
 asn-logger = { path = "../asn-logger" }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-#console_error_panic_hook = "0.1.7"
-#console_log = "1.0"
-wgpu = { version = "0.16", features = ["webgl"]}
-wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = [
-    "Document",
-    "Window",
-    "Element",
-]}
+wgpu = { version = "0.16" }
