--- a/asn-winapi-wgpu/Cargo.toml
+++ b/asn-winapi-wgpu/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pollster = "0.3"
 winit = "0.28.6"
 asn-core = { path = "../asn-core" }
 asn-logger = { path = "../asn-logger" }
