--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "asn-logger",
     "asn-engine",
+    "asn-scene-view-core",
     "asn-core",
     "rs-amberskynet",
     "rs-core",
