--- a/asn-runner-winit/Cargo.toml
+++ b/asn-runner-winit/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 winit = "0.28.6"
 asn-core = { path = "../asn-core" }
 asn-logger = { path = "../asn-logger" }
+asn-scene-view-core = { path = "../asn-scene-view-core" }
 wgpu = { version = "0.16" }
 pollster = "0.3"
 
