--- a/asn-scene-view-core/Cargo.toml
+++ b/asn-scene-view-core/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "asc-scene-view-core"
+name = "asn-scene-view-core"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 asn-core = { path = "../asn-core" }
+uuid = { version="1.3.3", features = ['wasm-bindgen', 'v4'] }
