--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [workspace]
 resolver = "2"
 members = [
-    "asn-logger",
-    "asn-core",
-    "rs-amberskynet",
-    "rs-core",
-    "rs-gfx-core",
-    "rs-gfx-wgpu",
-    "rs-amberskynet",
-    "wasm-and-bin-examples/*",
+#    "asn-core",
+#    "rs-amberskynet",
+#    "rs-core",
+#    "rs-gfx-core",
+#    "rs-gfx-wgpu",
+#    "rs-amberskynet",
+#    "wasm-and-bin-examples/*",
     "sannbox-wgpu"
 ]
 
