--- a/sannbox-wgpu/Cargo.toml
+++ b/sannbox-wgpu/Cargo.toml
@@ -12,6 +12,8 @@ path = "src/main.rs"
 
 [dependencies]
 asn-logger = { path = "../asn-logger" }
+asn-core = { path = "../asn-core" }
+asn-image = { path = "../asn-image" }
 rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 bytemuck = { version = "1.13.1", features = [ "derive" ] }
 wgpu = { version = "0.17.0" }
