--- a/asn-decoder-tiled/Cargo.toml
+++ b/asn-decoder-tiled/Cargo.toml
@@ -10,7 +10,6 @@ crate-type = ["cdylib", "rlib"]
 asn-core = { path = "../asn-core" }
 asn-logger = { path= "../asn-logger" }
 xmlparser = "0.13.5"
-serde-xml-rs = "0.6.0"
+#serde-xml-rs = "0.6.0"
 serde = { version = "1.0.192", features = ["derive"] }
-#serde = "1.0.192"
-#serde_derive = "1.0.192"
+quick-xml = { version = "0.28.2", features = ["serialize"] }
