--- a/sannbox-wgpu/Cargo.toml
+++ b/sannbox-wgpu/Cargo.toml
@@ -18,7 +18,7 @@ asn-decoder-tiled = { path = "../asn-decoder-tiled" }
 rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 bytemuck = { version = "1.14.0", features = [ "derive" ] }
 wgpu = "0.18.0"
-winit = "0.28.6"
+winit = { version = "0.29.4", features = ["rwh_05"]}
 pollster = "0.3.0"
 
 
