--- a/sannbox-wgpu/Cargo.toml
+++ b/sannbox-wgpu/Cargo.toml
@@ -20,7 +20,8 @@ bytemuck = { version = "1.14.0", features = [ "derive" ] }
 wgpu = "0.18.0"
 winit = { version = "0.29.4", features = ["rwh_05"]}
 pollster = "0.3.0"
-
+serde = { version = "1.0.192", features = ["derive"] }
+serde_yaml = "0.9.27"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wgpu = { version = "0.18.0", features = ["webgl"]}
