--- a/asn-web-release/Cargo.toml
+++ b/asn-web-release/Cargo.toml
@@ -16,6 +16,8 @@ asn-logger = { path = "../asn-logger" }
 asn-core = { path = "../asn-core" }
 asn-decoder-image = { path = "../asn-decoder-image" }
 asn-decoder-tiled = { path = "../asn-decoder-tiled" }
+asn-wgpu-released = { path = "./modules/asn-wgpu-released" }
+
 rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 bytemuck = { version = "1.15.0", features = [ "derive" ] }
 winit = { version = "0.29.15", features = ["rwh_05"]}
