--- a/asn-web-release/modules/asn-wgpu-released/Cargo.toml
+++ b/asn-web-release/modules/asn-wgpu-released/Cargo.toml
@@ -11,3 +11,6 @@ crate-type = ["cdylib", "rlib"]
 #path = "src/main.rs"
 
 [dependencies]
+asn-core = { path = "../../../asn-core" }
+asn-logger = { path = "../../../asn-logger" }
+winit = { version = "0.29.15"}
