--- a/asn-web-release/Cargo.toml
+++ b/asn-web-release/Cargo.toml
@@ -14,5 +14,6 @@ crate-type = ["cdylib", "rlib"]
 cfg-if = "1"
 asn-logger = { path = "../asn-logger" }
 asn-core = { path = "../asn-core" }
+asn-winit-released = { path = "./modules/asn-winit-released" }
 asn-wgpu-released = { path = "./modules/asn-wgpu-released" }
 wasm-bindgen = "0.2.92"
