--- a/asn-web-release/modules/asn-winit-released/Cargo.toml
+++ b/asn-web-release/modules/asn-winit-released/Cargo.toml
@@ -13,4 +13,5 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 asn-core = { path = "../../../asn-core" }
 asn-logger = { path = "../../../asn-logger" }
-winit = { version = "0.29.15"}
+winit = "0.30.0"
+
