--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-    "sannbox-wgpu",
+#    "sannbox-wgpu",
     "asn-web-release"
 #    "asn-image",
 #    "asn-core"
