--- a/asn-web-release/Cargo.toml
+++ b/asn-web-release/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib", "rlib"]
 cfg-if = "1"
 asn-logger = { path = "../asn-logger" }
 asn-core = { path = "../asn-core" }
-asn-wgpu-released = { path = "./modules/asn-wgpu-released" }
+#asn-wgpu-released = { path = "./modules/asn-wgpu-released" }
 asn-engine-released = { path = "./modules/asn-engine-released" }
 asn-winit-released = { path = "./modules/asn-winit-released" }
 wasm-bindgen = "0.2.93"
