--- a/asn-web-release/modules/asn-winit-released/Cargo.toml
+++ b/asn-web-release/modules/asn-winit-released/Cargo.toml
@@ -8,5 +8,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 asn-core = { path = "../../../asn-core" }
+#asn-core-winapi = { path = "../../../asn-core-winapi" }
 asn-logger = { path = "../../../asn-logger" }
+asn-wgpu-released = { path = "../asn-wgpu-released" }
 winit = "0.30.5"
+
